--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.17.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.36.4",
@@ -28,11 +28,13 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "pg": "^8.12.0",
-    "prisma": "^5.13.0",
     "sharp": "^0.32.6",
     "shortid": "^2.2.16",
     "slugify": "^1.6.6",
     "sslcommerz-lts": "^1.1.0",
     "uniqid": "^5.4.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.17.0"
   }
 }
